--- a/pageshop/package.json
+++ b/pageshop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "igniteshop",
+  "name": "pageshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
+    "axios": "^1.6.2",
+    "keen-slider": "^6.8.6",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "stripe": "^14.8.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.3",
+    "@types/react": "18.2.42",
     "eslint": "^8",
     "eslint-config-next": "14.0.3"
   }
